<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessageCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="unread_sms">Unread SMS: </string>
    <string name="total_sms">Total SMS: </string>
    <string name="unread_mms">Unread MMS: </string>
    <string name="total_mms">Total MMS: </string>
    <string name="button_refresh">Refresh</string>

</resources>
