<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qiss.richardtin.messagecounter.MessageCounterActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/textUnreadSMS"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical"
        android:text="@string/unread_sms" />

    <TextView
        android:id="@+id/textTotalSMS"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical"
        android:text="@string/total_sms" />

    <TextView
        android:id="@+id/textUnreadMMS"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical"
        android:text="@string/unread_mms" />

    <TextView
        android:id="@+id/textTotalMMS"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:gravity="center_vertical"
        android:text="@string/total_mms" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_refresh"
        android:id="@+id/buttonRefresh" />

</LinearLayout>
